fixes bug 222588 "Mozilla creates too many threads and seems to never terminate them" r=timeless sr=bzbarsky